END header html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <title>Curriculum Vitae de Jane Doe</title>
 </head>
 <body>
-    
+    <header>
+        <figure>
+            <img src="" alt="">
+            <figcaption>JANE DOE</figcaption>
+        </figure>
+        <h1>
+            Développeuse Web junior
+        </h1>
+        <address>
+            <a href="" target="_blank">12 rue des Oliviers<br>53200 La Roche-Neuville</a>
+            <a href="mailto:jane.do@gmail.com">jane.doe@gmail.com</a>
+            <a href="tel:0606060606">0606060606</a>
+        </address>
+    </header>
 </body>
 </html>
